--- a/philipp/Kugeln.yaml
+++ b/philipp/Kugeln.yaml
@@ -1,27 +1,35 @@
-balls:
+spheres:
   ball1:
-    radius: 1.0
+    radius:
+      value: 2.0
+      range: [0.1, 6]
     position: [1.0, -2.0, 3.0]
     color: [1, 0, 0]
     velocity: [1.0, 3.0, 0.0]
     mass: 100.0
   ball2:
-    radius: 1.0
+    radius:
+      value: 1.0
+      range: [ 0.1, 5 ]
     position: [ -1.0, 2.0, 3.0 ]
     color: [0.0, 1.0, 0.0]
     velocity: [ 1.0, 0.0, 0.0 ]
     mass: 0.5
   ball3:
-    radius: 1.0
+    radius:
+      value: 1.0
+      range: [ 0.1, 5 ]
     position: [ 1.0, 2.0, -3.0 ]
     color: [0.0, 0.0, 1]
     velocity: [ -1.0, 0.0, 2.0 ]
     mass: 1.0
   ball4:
-    radius: 1.0
+    radius:
+      value: 1.0
+      range: [ 0.1, 5 ]
     position: [ 1.0, -2.0, -3.0 ]
     color: [1, 0.9, 0]
-    velocity: [ 40000.0, 0.0, 0.0 ]
+    velocity: [ 40.0, 0.0, 0.0 ]
     mass: 2.0
 
 
